--- a/todo list/index.html
+++ b/todo list/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>todo list</title>
+	<title>todo list awesome</title>
 	<link rel="stylesheet" type="text/css" href="assets/css/todos.css">
 	<link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
